Add Base World Map

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <header>
             <h1>My World Map</h1>
         </header>
-        <div class="content active">
+        <div class="content">
             <div id="world" class="map"></div>
             <div id="country" class="map"></div>
         </div>
@@ -30,11 +30,11 @@
         <script src="https://d3js.org/d3.v4.min.js"></script>
         <!-- TopoJSON JS -->
         <script src="https://d3js.org/topojson.v1.min.js"></script>
+        <!-- World Map Script-->
+        <script src="js/world.js"></script>
+        <!-- Country Map Script -->
+        <script src="js/country.js"></script>
         <!-- Page Script -->
         <script src="js/script.js"></script>
-        <!-- World Map Script-->
-        <script src="js/WorldMap.js"></script>
-        <!-- Country Map Script -->
-        <script src="js/InfoList.js"></script>
     </body>
 </html>
